<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Lightsapp</string>
    <string name="title_section_send">Send</string>
    <string name="title_section_recv">Recv</string>
    <string name="title_section_graph">Graph</string>
    <string name="action_settings">Settings</string>
    <string name="action_exit">Exit</string>
    <string name="idle">...</string>
    <string name="btn_start">start</string>
    <string name="btn_stop">stop</string>
    <string name="btn_reset">reset</string>
    <string name="text_hint">Enter your message</string>
    <string name="title_activity_about">About</string>
    <string name="action_about">About</string>
    <string name="sensitivity">Sensitivity</string>
    <string name="lightbulb_desc">lightbulb image</string>
    <string name="Sound">Sound</string>
    <string name="Light">Light</string>

</resources>
