<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:id="@+id/fragment_send"
                tools:context=".Main$PlaceholderFragment">

    <TextView
        android:id="@+id/TextViewStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="true"
        android:gravity="top|center"
        android:layout_gravity="center_horizontal"
        android:textSize="12dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="false"
        android:layout_alignParentStart="false"
        android:maxLines="2"
        android:minLines="2"/>

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/ImageViewLightbulb"
        android:src="@drawable/lightbulb_off"
        android:layout_gravity="top|center"
        android:contentDescription="@string/lightbulb_desc"
        android:layout_below="@+id/TextViewStatus"
        android:layout_above="@+id/LayoutCtl"
        android:scaleType="fitCenter"
        android:layout_centerInParent="true"
        android:maxHeight="220dp"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom|center_horizontal"
        android:id="@+id/LayoutCtl"
        android:padding="5dp"
        android:layout_alignParentBottom="true"
        android:focusableInTouchMode="true"
        android:descendantFocusability="beforeDescendants">

        <TextView
            android:id="@+id/TextViewSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="true"
            android:gravity="top|left"
            android:textSize="18dp"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:gravity="center_horizontal"
            android:paddingTop="5dp">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/EditViewSend"
                android:editable="true"
                android:enabled="true"
                android:textAlignment="textEnd"
                android:gravity="center|center_vertical"
                android:ellipsize="end"
                android:inputType="text"
                android:selectAllOnFocus="true"
                android:minLines="2"
                android:maxLines="2"
                android:layout_gravity="center_horizontal"
                android:hint="@string/text_hint"
                android:textStyle="normal"
                android:capitalize="none"
                android:paddingBottom="10dp"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Repeat"
                android:id="@+id/CheckBoxRepeat"
                android:clickable="true"
                android:enabled="true"
                android:layout_gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Sound"
                android:id="@+id/CheckBoxSound"
                android:enabled="true"
                android:checked="true"
                android:clickable="true" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Light"
                android:id="@+id/CheckBoxLight"
                android:enabled="true"
                android:checked="true"
                android:clickable="true" />
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_start"
            android:id="@+id/ButtonSend"
            android:textAlignment="center"
            android:clickable="true"
            android:enabled="true"
            android:layout_gravity="center"
            android:gravity="center|center_horizontal"
            android:visibility="visible"
            />
    </LinearLayout>

</RelativeLayout>
