<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:id="@+id/fragment_recv"
                tools:context=".Main$PlaceholderFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:id="@+id/txt_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="true"
            android:gravity="top|center"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/small_text_size"/>

        <FrameLayout
            android:id="@+id/camera_preview"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />

        <TextView
            android:id="@+id/txt_rx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="true"
            android:gravity="top|left"
            android:layout_gravity="center_horizontal"
            android:text="@string/idle"
            android:textSize="@dimen/small_text_size"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/sensibility"
                android:id="@+id/textView"
                android:layout_gravity="center_vertical|left"
                android:gravity="center_vertical"
                android:paddingRight="4dp" />

            <SeekBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/seekBarSensibility"
                android:clickable="true"
                android:focusable="true"
                android:max="100"
                android:minWidth="150dp"
                android:layout_gravity="right" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_start"
                android:id="@+id/button_start"
                android:textAlignment="center"
                android:clickable="true"
                android:enabled="true"
                android:layout_gravity="right"
                android:gravity="center_vertical|center"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_reset"
                android:id="@+id/button_reset"
                android:layout_gravity="center_horizontal"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
